fix: full height on small screens

--- a/mediaQuiries.css
+++ b/mediaQuiries.css
@@ -1,11 +1,8 @@
 @media screen and (max-width: 768px) {
 	.container {
 		width: 100%;
-		height: 100% !important;
+		min-height: 100vh;
 		margin: none;
-	}
-	body {
-		height: 100vh;
 	}
 	.task p {
 		font-size: 18px;
@@ -22,5 +19,4 @@
 	.input-field input::placeholder {
 		font-size: 12px;
 	}
-	
 }
